--- a/src/styles/scss/bootstrap_theme/bootstrap.scss
+++ b/src/styles/scss/bootstrap_theme/bootstrap.scss
@@ -2,7 +2,7 @@
 
 // Variable overrides
 $body-bg: #fff;
-$body-color: #393939;
+$body-color: #52565f;
 $primary: #00a1c7;
 $secondary:  #EEBCC7;
 $success: #488f31;
@@ -23,7 +23,7 @@ $container-max-widths: (
 
 $spacer: 1rem;
 $font-family-sans-serif: 'Open Sans', sans-serif;
-$font-size-base: .96rem;
+$font-size-base: .94rem;
 $font-size-lg:  $font-size-base * 1.35;
 
 
