bg color in banner && media breakpoints fixed :sun: :whale:

--- a/src/styles/scss/_search_form.scss
+++ b/src/styles/scss/_search_form.scss
@@ -5,7 +5,7 @@
     right: 15px;
     background: #fff;
     border-bottom: 1px solid $border-color;
-    @media (min-width: 567px) {
+    @include media-breakpoint-up(sm) {
       position: relative;
     }
     .form-control {
