--- a/src/styles/scss/bootstrap_theme/bootstrap.scss
+++ b/src/styles/scss/bootstrap_theme/bootstrap.scss
@@ -4,7 +4,7 @@
 $body-bg: #fff;
 $body-color: #52565f;
 $primary: #00a1c7;
-$secondary:  #EEBCC7;
+$secondary: #f5bdca;
 $success: #488f31;
 $info: #c1e7ff;
 $warning: #ffa33e;
