--- a/src/styles/css/index.css
+++ b/src/styles/css/index.css
@@ -20,7 +20,7 @@
   --gray: #6c757d;
   --gray-dark: #343a40;
   --primary: #00a1c7;
-  --secondary: #EEBCC7;
+  --secondary: #f5bdca;
   --success: #488f31;
   --info: #c1e7ff;
   --warning: #ffa33e;
@@ -1085,19 +1085,19 @@ pre {
 .table-secondary,
 .table-secondary > th,
 .table-secondary > td {
-  background-color: #faecef; }
+  background-color: #fcedf0; }
 
 .table-secondary th,
 .table-secondary td,
 .table-secondary thead th,
 .table-secondary tbody + tbody {
-  border-color: #f6dce2; }
+  border-color: #fadde3; }
 
 .table-hover .table-secondary:hover {
-  background-color: #f5d8de; }
+  background-color: #f8d7de; }
   .table-hover .table-secondary:hover > td,
   .table-hover .table-secondary:hover > th {
-    background-color: #f5d8de; }
+    background-color: #f8d7de; }
 
 .table-success,
 .table-success > th,
@@ -1714,26 +1714,26 @@ fieldset:disabled a.btn {
 
 .btn-secondary {
   color: #212529;
-  background-color: #EEBCC7;
-  border-color: #EEBCC7; }
+  background-color: #f5bdca;
+  border-color: #f5bdca; }
   .btn-secondary:hover {
     color: #212529;
-    background-color: #e69dae;
-    border-color: #e493a5; }
+    background-color: #f09caf;
+    border-color: #ee91a6; }
   .btn-secondary:focus, .btn-secondary.focus {
-    box-shadow: 0 0 0 0 rgba(207, 165, 175, 0.5); }
+    box-shadow: 0 0 0 0 rgba(213, 166, 178, 0.5); }
   .btn-secondary.disabled, .btn-secondary:disabled {
     color: #212529;
-    background-color: #EEBCC7;
-    border-color: #EEBCC7; }
+    background-color: #f5bdca;
+    border-color: #f5bdca; }
   .btn-secondary:not(:disabled):not(.disabled):active, .btn-secondary:not(:disabled):not(.disabled).active,
   .show > .btn-secondary.dropdown-toggle {
     color: #212529;
-    background-color: #e493a5;
-    border-color: #e1899d; }
+    background-color: #ee91a6;
+    border-color: #ed869e; }
     .btn-secondary:not(:disabled):not(.disabled):active:focus, .btn-secondary:not(:disabled):not(.disabled).active:focus,
     .show > .btn-secondary.dropdown-toggle:focus {
-      box-shadow: 0 0 0 0 rgba(207, 165, 175, 0.5); }
+      box-shadow: 0 0 0 0 rgba(213, 166, 178, 0.5); }
 
 .btn-success {
   color: #fff;
@@ -1895,25 +1895,25 @@ fieldset:disabled a.btn {
       box-shadow: 0 0 0 0 rgba(0, 161, 199, 0.5); }
 
 .btn-outline-secondary {
-  color: #EEBCC7;
-  border-color: #EEBCC7; }
+  color: #f5bdca;
+  border-color: #f5bdca; }
   .btn-outline-secondary:hover {
     color: #212529;
-    background-color: #EEBCC7;
-    border-color: #EEBCC7; }
+    background-color: #f5bdca;
+    border-color: #f5bdca; }
   .btn-outline-secondary:focus, .btn-outline-secondary.focus {
-    box-shadow: 0 0 0 0 rgba(238, 188, 199, 0.5); }
+    box-shadow: 0 0 0 0 rgba(245, 189, 202, 0.5); }
   .btn-outline-secondary.disabled, .btn-outline-secondary:disabled {
-    color: #EEBCC7;
+    color: #f5bdca;
     background-color: transparent; }
   .btn-outline-secondary:not(:disabled):not(.disabled):active, .btn-outline-secondary:not(:disabled):not(.disabled).active,
   .show > .btn-outline-secondary.dropdown-toggle {
     color: #212529;
-    background-color: #EEBCC7;
-    border-color: #EEBCC7; }
+    background-color: #f5bdca;
+    border-color: #f5bdca; }
     .btn-outline-secondary:not(:disabled):not(.disabled):active:focus, .btn-outline-secondary:not(:disabled):not(.disabled).active:focus,
     .show > .btn-outline-secondary.dropdown-toggle:focus {
-      box-shadow: 0 0 0 0 rgba(238, 188, 199, 0.5); }
+      box-shadow: 0 0 0 0 rgba(245, 189, 202, 0.5); }
 
 .btn-outline-success {
   color: #488f31;
@@ -3486,13 +3486,13 @@ input[type="button"].btn-block {
 
 .badge-secondary {
   color: #212529;
-  background-color: #EEBCC7; }
+  background-color: #f5bdca; }
   a.badge-secondary:hover, a.badge-secondary:focus {
     color: #212529;
-    background-color: #e493a5; }
+    background-color: #ee91a6; }
   a.badge-secondary:focus, a.badge-secondary.focus {
     outline: 0;
-    box-shadow: 0 0 0 0 rgba(238, 188, 199, 0.5); }
+    box-shadow: 0 0 0 0 rgba(245, 189, 202, 0.5); }
 
 .badge-success {
   color: #fff;
@@ -3600,13 +3600,13 @@ input[type="button"].btn-block {
     color: #002a34; }
 
 .alert-secondary {
-  color: #7c6267;
-  background-color: #fcf2f4;
-  border-color: #faecef; }
+  color: #7f6269;
+  background-color: #fdf2f4;
+  border-color: #fcedf0; }
   .alert-secondary hr {
-    border-top-color: #f5d8de; }
+    border-top-color: #f8d7de; }
   .alert-secondary .alert-link {
-    color: #604b4f; }
+    color: #624c51; }
 
 .alert-success {
   color: #254a19;
@@ -3854,15 +3854,15 @@ input[type="button"].btn-block {
     border-color: #005467; }
 
 .list-group-item-secondary {
-  color: #7c6267;
-  background-color: #faecef; }
+  color: #7f6269;
+  background-color: #fcedf0; }
   .list-group-item-secondary.list-group-item-action:hover, .list-group-item-secondary.list-group-item-action:focus {
-    color: #7c6267;
-    background-color: #f5d8de; }
+    color: #7f6269;
+    background-color: #f8d7de; }
   .list-group-item-secondary.list-group-item-action.active {
     color: #fff;
-    background-color: #7c6267;
-    border-color: #7c6267; }
+    background-color: #7f6269;
+    border-color: #7f6269; }
 
 .list-group-item-success {
   color: #254a19;
@@ -4557,12 +4557,12 @@ button.bg-primary:focus {
   background-color: #007894 !important; }
 
 .bg-secondary {
-  background-color: #EEBCC7 !important; }
+  background-color: #f5bdca !important; }
 
 a.bg-secondary:hover, a.bg-secondary:focus,
 button.bg-secondary:hover,
 button.bg-secondary:focus {
-  background-color: #e493a5 !important; }
+  background-color: #ee91a6 !important; }
 
 .bg-success {
   background-color: #488f31 !important; }
@@ -4652,7 +4652,7 @@ button.bg-dark:focus {
   border-color: #00a1c7 !important; }
 
 .border-secondary {
-  border-color: #EEBCC7 !important; }
+  border-color: #f5bdca !important; }
 
 .border-success {
   border-color: #488f31 !important; }
@@ -6881,10 +6881,10 @@ a.text-primary:hover, a.text-primary:focus {
   color: #00637b !important; }
 
 .text-secondary {
-  color: #EEBCC7 !important; }
+  color: #f5bdca !important; }
 
 a.text-secondary:hover, a.text-secondary:focus {
-  color: #df7f94 !important; }
+  color: #eb7b95 !important; }
 
 .text-success {
   color: #488f31 !important; }
@@ -7121,7 +7121,7 @@ html {
 /* Footer */
 .footer {
   font-size: 0.84rem;
-  border-top: 4px solid #ecb4c0; }
+  border-top: 4px solid #f4b4c3; }
   .footer-title {
     margin-bottom: 1.2rem; }
   .footer-list {
@@ -7156,7 +7156,7 @@ html {
     padding: 0.25rem 0;
     display: inline-block; }
 
-@media (min-width: 986px) {
+@media (min-width: 992px) {
   .books-card {
     margin-top: -74px; } }
 
@@ -7166,7 +7166,7 @@ html {
   right: 15px;
   background: #fff;
   border-bottom: 1px solid #e9ecef; }
-  @media (min-width: 567px) {
+  @media (min-width: 576px) {
     .search-form {
       position: relative; } }
   .search-form .form-control {
