--- a/src/styles/css/index.css
+++ b/src/styles/css/index.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css?family=Open+Sans:300,400,600|Kurale");
+@import url("https://fonts.googleapis.com/css?family=Kurale|Open+Sans:300,300i,400,600,700&display=swap");
 /*!
  * Bootstrap v4.3.1 (https://getbootstrap.com/)
  * Copyright 2011-2019 The Bootstrap Authors
@@ -7061,13 +7061,20 @@ a[href]:hover {
 
 h1, .h1 {
   font-size: 2rem; }
-  @media (min-width: 968px) {
+  @media (min-width: 992px) {
     h1, .h1 {
       font-size: 2.35rem; } }
 
+h2, .h2 {
+  font-size: 1.4rem; }
+  @media (min-width: 992px) {
+    h2, .h2 {
+      font-size: 1.88rem; } }
+
 h1, h2, h3, h4, h5, h6,
 .h1, .h2, .h3, .h4, .h5, .h6 {
-  color: #2d3440; }
+  color: #2d3440;
+  font-weight: 500; }
 
 .bg-dark *,
 .text-white * {
@@ -7112,9 +7119,7 @@ html {
 /* Header */
 .header {
   min-height: 54px;
-  box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.08);
-  padding-left: 0;
-  padding-right: 0; }
+  box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.08); }
   .header .container {
     position: relative; }
 
@@ -7156,7 +7161,7 @@ html {
     padding: 0.25rem 0;
     display: inline-block; }
 
-@media (min-width: 992px) {
+@media (min-width: 768px) {
   .books-card {
     margin-top: -74px; } }
 
@@ -7168,17 +7173,24 @@ html {
   border-bottom: 1px solid #e9ecef; }
   @media (min-width: 576px) {
     .search-form {
-      position: relative; } }
+      position: relative;
+      left: 0;
+      right: 0; } }
   .search-form .form-control {
     font-size: 14px; }
 
-.info-block {
+.banner {
   position: relative;
-  height: 30vh;
-  overflow: hidden;
-  background: url("/img/bg.jpeg") 50% -50% no-repeat;
-  background-attachment: fixed; }
-  .info-block:before {
+  overflow: hidden; }
+  @media (min-width: 768px) {
+    .banner {
+      min-height: 30vh;
+      background: url("/img/bg.jpeg") 50% -50%/cover no-repeat;
+      background-attachment: fixed; } }
+  @media (min-width: 768px) {
+    .banner .container {
+      margin-top: -37px; } }
+  .banner:before {
     position: absolute;
     content: "";
     width: 100%;
@@ -7186,10 +7198,12 @@ html {
     background: url("/img/bg.png");
     z-index: 0;
     background-attachment: fixed; }
-  .info-block h2 {
+  .banner h2 {
     font-weight: 600;
     letter-spacing: 0.5px;
     text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.05); }
+  .banner .btn {
+    font-weight: 700; }
 
 .books-grid {
   display: grid;
