--- a/src/styles/scss/_typography.scss
+++ b/src/styles/scss/_typography.scss
@@ -3,11 +3,20 @@
   font-family: "Kurale", serif;
 }
 
-h1, .h1 {
-    font-size: 2rem;
-    @media (min-width: 968px) {
-        font-size: 2.35rem;
-    }
+h1,
+.h1 {
+  font-size: 2rem;
+  @include media-breakpoint-up(lg) {
+    font-size: 2.35rem;
+  }
+}
+
+h2,
+.h2 {
+  font-size: 1.4rem;
+  @include media-breakpoint-up(lg) {
+    font-size: 1.88rem;
+  }
 }
 
 h1,
@@ -23,6 +32,7 @@ h6,
 .h5,
 .h6 {
   color: $dark;
+  font-weight: 500;
 }
 
 .bg-dark *,
