--- a/src/styles/scss/bootstrap_theme/bootstrap.scss
+++ b/src/styles/scss/bootstrap_theme/bootstrap.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,600|Kurale');
+@import url('https://fonts.googleapis.com/css?family=Kurale|Open+Sans:300,300i,400,600,700&display=swap');
 
 // Variable overrides
 $body-bg: #fff;
