--- a/src/styles/scss/_books.scss
+++ b/src/styles/scss/_books.scss
@@ -2,22 +2,23 @@
   &s-grid {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(150px, 2fr));
-    grid-column-gap: 20px;
-    grid-row-gap: 20px;
+    grid-column-gap: 30px;
+    grid-row-gap: 30px;
     grid-auto-flow: dense;
-    grid-auto-rows: auto;
+    align-items: end;
   }
   &-img {
     &-wrapper {
       display: block;
       position: relative;
       overflow: hidden;
+      img {
+        display: block;
+        object-fit: contain;
+        width: 100%;
+      }
     }
-    & {
-      position: absolute;
-      object-fit: contain;
-      bottom: 0;
-    }
+    
   }
   &-title {
     color: inherit;
